Address tablet portrait layout issues

--- a/components/Footer/index.module.css
+++ b/components/Footer/index.module.css
@@ -6,12 +6,19 @@
   display: grid;
 
   @media screen and (min-width: theme(screens.md.min)) {
-    @apply px-16 py-8 pt-16 grid-cols-5 gap-16;
+    @apply px-8 pb-8 pt-16 grid-cols-5 gap-x-4 gap-y-16;
     grid-template-areas:
-    "navigationLinks navigationLinks . signupForm signupForm"
-    "socialLinks socialLinks copyright signupForm signupForm";
+      "navigationLinks navigationLinks navigationLinks signupForm signupForm"
+      "socialLinks socialLinks copyright . .";
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    
+  }
+
+  @media screen and (min-width: theme(screens.lg.min)) {
+    @apply px-16 pb-8 pt-16 grid-cols-5 gap-16;
+    grid-template-areas:
+      "navigationLinks navigationLinks . signupForm signupForm"
+      "socialLinks socialLinks copyright . .";
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   }
 
   :is(blockquote, dl, dd, h1, h2, h3, h4, h5, h6, hr, figure, p, pre) {
@@ -23,7 +30,9 @@
   @apply grid-cols-2;
   display: grid;
   gap: 1rem;
-  @media screen and (min-width: theme(screens.md.min)) {grid-area: navigationLinks;}
+  @media screen and (min-width: theme(screens.md.min)) {
+    grid-area: navigationLinks;
+  }
   grid-auto-flow: column;
 
   nav {
@@ -41,14 +50,19 @@
 .copyright {
   @apply text-sm;
   display: grid;
-  @media screen and (min-width: theme(screens.md.min)) {grid-area: copyright;}
+  @media screen and (min-width: theme(screens.md.min)) {
+    grid-area: copyright;
+  }
   place-content: center;
 }
 
 .signupForm {
   align-content: start;
   align-items: start;
-  @media screen and (min-width: theme(screens.md.min)) {grid-area: signupForm;}
+  @media screen and (min-width: theme(screens.md.min)) {
+    grid-area: signupForm;
+    align-self: end;
+  }
 }
 
 .social {
@@ -56,9 +70,12 @@
   align-content: center;
   display: grid;
   gap: 1rem;
-  
+
   grid-auto-flow: column;
   justify-content: center;
 
-  @media screen and (min-width: theme(screens.md.min)) {grid-area: socialLinks; justify-content: start;}
+  @media screen and (min-width: theme(screens.md.min)) {
+    grid-area: socialLinks;
+    justify-content: start;
+  }
 }
